--- a/samples/basic_sample/consumer/sample.properties
+++ b/samples/basic_sample/consumer/sample.properties
@@ -4,12 +4,14 @@
 executableName = node sample_kcl_app.js
 
 # The name of an Amazon Kinesis stream to process.
-streamName = kclnodejssample
+#streamName = kclnodejssample
+streamName = jsonTestRodriStream
 
 # Used by the KCL as the name of this application. Will be used as the name
 # of an Amazon DynamoDB table which will store the lease and checkpoint
 # information for workers with this application name
-applicationName = kclnodejssample
+#applicationName = kclnodejssample
+applicationName = jsonTestRodriAppConsumer
 
 # Users can change the credentials provider the KCL will use to retrieve credentials.
 # The DefaultAWSCredentialsProviderChain checks several other providers, which is
