--- a/package.json
+++ b/package.json
@@ -15,16 +15,22 @@
     "kcl-bootstrap.bat": "bin/kcl-bootstrap.bat"
   },
   "scripts": {
-    "start": "node samples/basic_sample/producer/sample_kinesis_producer_app.js",
-    "build": "grunt build",
-    "compile": "grunt compile",
-    "clean": "grunt clean",
-    "test": "grunt test",
-    "release": "grunt release",
-    "doc": "grunt jsdoc"
+    "start": "node samples/basic_sample/producer/sample_kinesis_producer_app.js"
   },
   "dependencies": {
-    "commander": "~2.6.0"
+    "commander": "~2.6.0",
+    "aws-sdk": "^2.175.0",
+    "chai": "^1.10.0",
+    "grunt": "^1.0.3",
+    "grunt-cli": "^1.3.2",
+    "grunt-contrib-clean": "^1.1.0",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-jsdoc": "^1.1.0",
+    "grunt-mocha-test": "^0.12.7",
+    "ink-docstrap": "^1.3.2",
+    "log4js": "^0.6.38",
+    "mocha": "^5.2.0",
+    "sinon": "^1.17.7"
   },
   "devDependencies": {
     "async": "^0.9.2",
